--- a/css/styles.css
+++ b/css/styles.css
@@ -39,8 +39,23 @@ body {
 }
 
 .tab-content {
-	border-left: 1px solid #ddd;
-	border-right: 1px solid #ddd;
-	border-bottom: 1px solid #ddd;
+	border-left: 1px solid #DDD;
+	border-right: 1px solid #DDD;
+	border-bottom: 1px solid #DDD;
 	padding: 10px;
+}
+
+.carousel {
+	background: #512DA8;
+}
+
+.carousel-item {
+	height: 300px;
+}
+
+.carousel-item img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-height: 300px;
 }
