--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -1,11 +1,11 @@
 .row-header {
 	margin: 0px auto;
-	padding: 0px 0px;
+	padding: 0pc auto;
 }
 
 .row-content {
 	margin: 0px auto;
-	padding: 50px 0px 0px;
+	padding: 50px 0px 50px 0px;
 	border-bottom: 1px ridge;
 	min-height: 400px;
 }
@@ -13,17 +13,17 @@
 .footer {
 	background-color: #D1C4E9;
 	margin: 0px auto;
-	padding: 20px 0px;
+	padding: 20px 0px 20px 0px;
 }
 
-.jumborton {
+.jumbotron {
+	padding: 70px 30px 70px 30px;
 	margin: 0px auto;
-	padding: 70px 30px;
 	background: #9575CD;
 	color: floralwhite;
 }
 
-address {
+.address {
 	font-size: 80%;
 	margin: 0px;
 	color: #0F0F0F;
@@ -49,11 +49,11 @@ body {
 	background: #512DA8;
 }
 
-.carousel .carousel-item {
+.carousel-item {
 	height: 300px;
 }
 
-.carousel .carousel-item img {
+.carousel-item img {
 	position: absolute;
 	top: 0;
 	left: 0;
